# hoozz_play_esp32c3_voice_led

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: esp32.yml
Benchmarks/: iperf_test_data.txt
MCU/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
MCU/components/es7243e/: CMakeLists.txt
MCU/main/: CMakeLists.txt  audio.c  audio.h  class_id.h  crypto.c  crypto.h  encryp.c  encryp.h  event_bus.c  event_bus.h  led.c  led.h  led_effects.c  led_effects.h  main.cpp  model_config.h  recognition.cpp  recognition.h  sample_send.c  sample_send.h  simple_ctrl.c  simple_ctrl.h  spiffs.c  spiffs.h  wifi.c  wifi.h  ws2812b.c  ws2812b.h
MCU/main/feature_models/: audio_preprocessor_int8_x40.cc  audio_preprocessor_int8_x50.cc  audio_preprocessor_int8_x60.cc
MCU/main/speech_models/: model.cc
PCB/: ESP32C3_VOICE_LED_ES7243E_Sheet.SchDoc  ESP32C3_VOICE_LED_MCU_Sheet.SchDoc  ESP32C3_VOICE_LED_PCB.PcbDoc  ESP32C3_VOICE_LED_PCB_Project.PrjPCB  ESP32C3_VOICE_LED_WS2812B_Sheet.SchDoc
