idf_component_register(
	SRCS
		"main.cpp"
		"audio.c"
		"../components/tflm/project/examples/micro_speech/models/audio_preprocessor_int8_model_data.cc"
		"../components/tflm/project/examples/micro_speech/models/micro_speech_quantized_model_data.cc"
		"led_strip_encoder.c"
		"ws2812b.c"
		"led_effects.c"
		"wifi.c"
		"event_bus.c"
		"recognition.cpp"
		"simple_ctrl.c"
		"crypto.c"
		"sample_send.c"

        INCLUDE_DIRS
		"."
		"../components/tflm/project"
		"../components/tflm/project/third_party/gemmlowp"
		"../components/tflm/project/third_party/flatbuffers/include"
		"../components/tflm/project/third_party/kissfft"
		"../components/tflm/project/third_party/kissfft/tools"
		"../components/tflm/project/third_party/ruy"
		"../components/tflm/project/examples/micro_speech"
)

add_definitions(
	-fno-exceptions
	-Wno-deprecated-declarations
	-DTF_LITE_STATIC_MEMORY
	-fno-unwind-tables
	-ffunction-sections
	-fdata-sections
	-fmessage-length=0
)
