idf_component_register(
	SRCS
		"../components/tflm/project/examples/micro_speech/models/audio_preprocessor_int8_model_data.cc"
		"../components/tflm/project/examples/micro_speech/models/micro_speech_quantized_model_data.cc"
		"esp32-common/led_strip_encoder.c"
		"esp32-common/ws2812b.c"
		"esp32-common/wifi.c"
		"esp32-common/event_bus.c"
		"esp32-common/simple_ctrl.c"
		"esp32-common/crypto.c"
		"esp32-common/spiffs.c"
		"tiny-AES-c/aes.c"
		"main.cpp"
		"audio.c"
		"recognition.cpp"
		"sample_send.c"
		"led_effects.c"

        INCLUDE_DIRS
		"."
		"esp32-common"
		"tiny-AES-c"
		"../components/tflm/project"
		"../components/tflm/project/third_party/gemmlowp"
		"../components/tflm/project/third_party/flatbuffers/include"
		"../components/tflm/project/third_party/kissfft"
		"../components/tflm/project/third_party/kissfft/tools"
		"../components/tflm/project/third_party/ruy"
		"../components/tflm/project/examples/micro_speech"
)

add_definitions(
	-fno-exceptions
	-Wno-deprecated-declarations
	-DTF_LITE_STATIC_MEMORY
	-fno-unwind-tables
	-ffunction-sections
	-fdata-sections
	-fmessage-length=0
)
